--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ivan954.github.io/MoviesGallery",
+  "homepage": "http://ivan954.github.io/MoviesGallery",
   "name": "movies-app",
   "version": "0.1.0",
   "private": true,
